# dorea

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bak  LICENSE  NOTICE.CN.md  README.CN.md  README.md  ROADMAP.md  local.sh  run.sh  xmake.lua
.env/: config.toml  plugin.toml  service.toml
.env/storage/default/: active.db
.env/storage/system/: active.db
.github/workflows/: build.yml  docs.yml  rust.yml  test.yml
config/: logger.yaml
database/: config.toml
database/logger/: logger.yaml
design/: README.md
design/weight-calc/: README.md  main.py
docs/: CNAME  README.md  client.md  connection.md  cover.md  getting_started.md  index.html  installation.md  nav.md  pagic.config.tsx
docs/en/: client.md  cmd.md  data-value.md  dbs.md  home.md  installation.md  protocol.md  summary.md  web-service.md
docs/en/plugin/: api.md  home.md  summary.md
docs/en/service/: home.md  summary.md
docs/getting_started/: architecture.md  connection.md  installation.md
docs/specs/: 2026-06-13-search-enhancement.md
docs/zh-cn/: client.md  cmd.md  data-value.md  dbs.md  home.md  installation.md  protocol.md  summary.md  web-service.md
docs/zh-cn/plugin/: api.md  home.md  summary.md
docs/zh-cn/service/: home.md  summary.md
dorea/: config.toml
env/: config
examples/: bulk.rs  bulk_concurrent.rs  cache.rs  counter.rs  dict-ops.rs  expire-demo.rs  hello-world.rs  info.rs  pipeline.rs  queue.rs  session.rs  upload.rs
examples/script/: bulk.py  configure.py
src/: cli_tui.rs  client.rs  command.rs  config.rs  configuration.rs  configure.rs  constant.rs  database.rs  docs.rs  event.rs  handle.rs  lib.rs  logger.rs  macros.rs  network.rs  server.rs  structure.rs  tool.rs  tools.rs  value.rs
src/plugin/: db.rs  log.rs  mod.rs
src/service/: README.md  db.rs  mod.rs  routes.rs  secret.rs  tools.rs
