[package]
name = "dorea"
version = "0.3.0"
description = "A key-value stroage system"
repository = "https://github.com/mrxiaozhuox/Dorea/"
authors = ["ZhuoEr Liu <mrxzx@wwsg18.top>"]
edition = "2018"
license = "MIT"
keywords = ["database","cache","storage"]
exclude = [
    ".DS_Store",
    ".idea/*",
    ".vscode/*"
]

[[bin]]
name = "dorea-cli"
path = "src/bin/cli.rs"
required-features = ["client"]


[[bin]]
name = "dorea-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]

# default features: all feature.
default = ["client"]

# server features: just run for server.
server = ["processor", "axum", "http", "hyper", "tower"]

# client features: client manager tools.
client = ["processor"]

# processor feature: include [value, network] to io data and fmt it.
processor = []

[dependencies]
tokio = { version = "1.6.1", features = ['full'] }
anyhow = "1.0.42"

# Command
rustyline = "8.2.0"

# LRU Queue
lru = "0.6.5"

# Bytes Tool
bytes = "1.0.1"

# Parsing Tool
#nom = "6.2.1"
nom = "7.0.0-alpha1"
clap = "2.33.3"

# Lazy Static
once_cell = "1.8.0"

# Directory Manager
dirs = "3.0.2"
walkdir = "2.3.2"

# Time & Date Manager
chrono = "0.4.19"

# Serialize & Deserialize
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
toml = "0.5.8"
bincode = "1.3.3"

base64 = "0.13.0"
md5 = "0.7.0"
crc = "2.0.0"

# Logger Library
log = "0.4.14"
log4rs = { version = "1.0.0" }

# Web Service 
axum = { version = "0.1.2", optional = true }
http = { version = "0.2.4", optional = true }
hyper = { version = "0.14.11", optional = true, features = ["full"] }
tower = { version = "0.4.8", optional = true }